# Targil1

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ex2  README.md  Targil1.code-workspace  details.txt  docker-compose.yml  index.js  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/api/: index.js
client/src/components/: CartDrawer.css  CartDrawer.jsx  Navbar.css  Navbar.jsx  ProductCard.css  ProductCard.jsx  RestaurantCard.css  RestaurantCard.jsx
client/src/context/: AuthContext.jsx  CartContext.jsx
client/src/pages/: AuthPages.css  HomePage.css  HomePage.jsx  LoginPage.jsx  ManagePage.css  ManagePage.jsx  OrdersPage.css  OrdersPage.jsx  RegisterPage.jsx  RestaurantPage.css  RestaurantPage.jsx
data/: userdata.txt
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.js  index.js
mobile/app/(tabs)/: _layout.js  home.js  manage.js  orders.js  profile.js
mobile/app/auth/: login.js  register.js
mobile/app/restaurant/: [id].js
mobile/src/api/: index.js
mobile/src/components/: colors.js
src/: AddCommand.cpp  AddCommand.h  CLI.cpp  CLI.h  CollaborativeRecommender.cpp  CollaborativeRecommender.h  Commands.cpp  Commands.h  FileStorage.cpp  FileStorage.h  HelpCommand.cpp  HelpCommand.h  ICommandHandler.h  IDataStorage.h  IRecommender.h  RecommendCommand.cpp  RecommendCommand.h  UserDataStore.cpp  UserDataStore.h  app.js  client.py  main.cpp
src/controllers/: ordersController.js  productsController.js  restaurantsController.js  searchController.js  tokensController.js  usersController.js
src/middleware/: auth.js  errorHandler.js
src/models/: store.js
src/models/mongoose/: User.js  (+3 more)
src/routes/: api.js
src/services/: ex2Client.js
tests/: tests.cpp
(+2 files in other folders)
